# CompCiruits

./: CMakeLists.txt  README.md
SRC/: BaseGUI.c  CktEngine.c  TaskList.txt  cc_CompMatrix.c  cc_DcMatrix.c  cc_solver.c  main.c
build-clang/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compcircuits.lib
include/: BaseGUI.h  CktEngine.h  cc_CompMatrix.h  cc_DcMatrix.h  cc_solver.h
